--- a/.github/workflows/purchase.yml
+++ b/.github/workflows/purchase.yml
@@ -2,8 +2,8 @@ name: Lotto Purchase (Run on GitHub)
 
 on:
   workflow_dispatch:
-  # schedule:
-  #   # 매주 일요일 오전 9:00 KST (UTC 00:00)
+   schedule:
+     # 매주 일요일 오전 9:00 KST (UTC 00:00)
      - cron: '0 0 * * 0'
 
 jobs:
